Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -246,7 +246,7 @@
  KRA_ideas_start:0 "クラクフの伝統"
  KRA_ideas_bonus:0 "クラクフの宿願"
  kra_legendary_legacy:0 "伝説の遺産"
- kra_legendary_legacy_desc:0 "伝説は、我々の街が、ドラゴンのすみかの遺跡に設立されたと語っている。それが真実であろうとなかろうと、我々は、伝説の創始者の勇敢さを分かち合っている。"
+ kra_legendary_legacy_desc:0 "伝説によれば、我々の街はドラゴンのすみかの遺跡に築かれたという。その真偽はともかく、我々は伝説的な創始者の勇敢さを分かち合っている。"
  kra_seat_of_gov:0 "政庁所在地"
  kra_seat_of_gov_desc:0 "クラクフは誰もが覚えていないほどの長い間、政府の重要な中心地となっている。もはやポーランド王国の一部ではないにもかかわらず、我が国は非常に効率的な官僚制度と行政制度を維持し続けている。"
  kra_city_rights:0 "都市の特権"
@@ -309,7 +309,7 @@
  arts_and_crafts_of_pskov:0 "プスコフの芸術と工芸"
  arts_and_crafts_of_pskov_desc:0 "地域における交易の中心地であるだけでなく、無数の小さな製造工場や手工芸品店の本拠地であったプスコフはヨーロッパ各地の商人たちが集まるルーシ最大の交易の中心地の一つであった。"
  pskov_before_all_others:0 "他全ての前にプスコフを"
- pskov_before_all_others_desc:0 "ルーシの他の偉大な中心地の台頭により、我々は今や北部の交易路の支配だけでなく、プスコフの未来と繁栄を保証することについて、これまで以上に自分たちで全てを行わなければならない。誰も強大なプスコフをしのぐことはできないだろう！"
+ pskov_before_all_others_desc:0 "ルーシの他の偉大な中心地の台頭により、我々は今や北部の交易路の支配だけでなく、プスコフの未来と繁栄を確保するために、これまで以上に全力を尽くさなければならない。誰も強大なプスコフを凌駕することはできないだろう！"
  SMO_ideas:0 "スモレンスクのアイデア"
  SMO_ideas_start:0 "スモレンスクの伝統"
  SMO_ideas_bonus:0 "スモレンスクの宿願"
@@ -743,15 +743,15 @@
  aow_events.43.a:0 "奴らが決して見出すことのない機会をものにしよう。"
  aow_events.43.b:0 "危険を冒す価値はないが、彼を見つけた者は昇進に値する。"
  aow_events.44.t:0 "買収された枢機卿が移動"
- aow_events.44.d:0 "[Root.GetName]の国境近くかつて滞在していた枢機卿は、今や我が国を完全に離れ、彼の忠誠を隣人に移した。我々を裏切るよう彼に賄賂を贈った[From.GetAdjective]の諜報員は、おそらく我々がこの問題において彼らの関与に気づかないだろうと思ったかもしれないが、彼らは間違っていた。教皇庁における我々の影響力を意図的に妨害することは容認できず、彼らの独り舞台となることは無いだろう。"
+ aow_events.44.d:0 "[Root.GetName]の国境近くかつて滞在していた枢機卿は、今や我が国を完全に離れ、彼の忠誠を隣人に移した。我々を裏切るよう彼に賄賂を贈った[From.GetAdjective]の諜報員は、おそらく我々がこの問題において彼らの関与に気づかないだろうと思ったかもしれないが、彼らは間違っていた。教皇庁における我々の影響力を意図的に妨害することは容認できず、異議を申し立てないわけにはいかない。"
  aow_events.44.a:0 "我が国と我らが教会、双方にとって侮辱だ。"
  aow_events.45.t:0 "異端の思考"
- aow_events.45.d:0 "[Root.GetName]の枢機卿は、我が国の異端者たちの近くで暮らしており、彼らを非難するのではなく、彼らを理解しようとしている。共感的な行動の過程で、彼は最近、我々の閣僚の一人に対し、自身が教会の教義を疑うようになったと告白するために接触した。これが教皇の知る所となれば、彼はもはや教皇庁で奉仕することは許されないが、あるいは我々は彼に少しのダカットでこれを自身の胸の中に留めておくよう説得することができるだろう。"
+ aow_events.45.d:0 "[Root.GetName]の枢機卿は、我が国の異端者たちの近くで暮らしており、彼らを非難するのではなく、彼らを理解しようとしている。共感的な行動ではあるが、彼は最近、我々の神父の一人に接触してきて、自分自身も教会の教義を疑い始めていると告白した。これが教皇の知る所となれば、彼はもはや教皇庁で奉仕することは許されないが、もしかしたら少々のダカットで、疑念を彼の胸中に留めておくよう説得できるかもしれない。"
  aow_events.45.a:0 "信仰は金では買えないが、沈黙することはできる。"
  aow_events.45.a.tt:0 "教皇が我が国の行動をかぎつける。"
  aow_events.45.b:0 "残念なことですが、疑惑があるのであれば、彼は、彼の地位にはふさわしくない。"
  aow_events.46.t:0 "教皇が不誠実な行為をかぎつける"
- aow_events.46.d:0 "教会の教義への疑念について、我々が沈黙を保つよう賄賂を送った枢機卿は、残念ながらまだ彼の罪の告白を信じている。さらに残念なことに、彼がこれをローマ教皇に対して行った方法は、おそらく彼が真に疑念を後悔していないため、おそらく彼に許しを与えることはないだろう。彼は我々の賄賂を受け取ったことを後悔しているが、これもまた以前の枢機卿のように、我々に対する不満とともに、教皇の知るところとなっている。"
+ aow_events.46.d:0 "教会の教義への疑念について、我々が沈黙を保つよう賄賂を送った枢機卿は、残念ながらまだ彼の罪の告白を信じていた。さらに残念なことに、ローマ教皇に対して告白をした方法により、赦しを与えられることはないだろう。おそらく、彼が自らの疑念を心から悔いていないゆえであろう。彼は賄賂を受け取ったことを後悔しているが、これもまた教皇の知るところとなり、教皇は元枢機卿に対する不満と同様に、我々にも不満を抱いている。"
  aow_events.46.a:0 "我々が許しを請うには手遅れなのか？"
  aow_events.47.t:0 "枢機卿が異教徒を疑う"
  aow_events.47.d:0 "[Root.GetName]の枢機卿はこれまでのところ[Root.Owner.GetName]に忠実であったが、彼の家がある[Root.GetCapitalName]の近くに暮らす異教徒を見た後、ここに滞在することに疑問を持ち始めている。彼は、[Root.Owner.Monarch.GetTitle]への手紙で、これらの人々は信頼できず、他の市民よりはるかに厳格な規制を受けることが求められると主張している。"
@@ -770,7 +770,7 @@
  aow_events.50.a:0 "大臣は我々に進むべき道を示している。"
  aow_events.50.b:0 "彼は越権行為を犯しており、解任されるべきだ。"
  aow_events.51.t:0 "枢機卿の罪"
- aow_events.51.d:0 "我々の工作員は隣国の一つで諜報活動を行っている間に、一人の強力な人物、枢機卿を尾行し、彼の忠誠心は清廉潔白に見えるけれども、彼の道徳心はすでに教会が想像できる範囲を超えるほどに堕落していることを突き止めた。彼の罪の詳細は我々の関心事ではないが、それらは教皇の興味を引くだろうし、隣人の影響力を弱める機会を我々に与えてくれるかもしれない。一方で、彼の階級に対する影響力を持っておくのも多くの状況において有用かもしれない。"
+ aow_events.51.d:0 "我々の工作員は隣国の一つで諜報活動を行っている間に、枢機卿である有力な人物を尾行し、一見すると彼の忠誠心は清廉潔白に見えるけれども、彼の道徳心はすでに教会が想像できる範囲を超えるほどに堕落していることを突き止めた。彼の罪の詳細は我々の関心事ではないが、それらは教皇の興味を引くだろうし、隣人の影響力を弱める機会を我々に与えてくれるかもしれない。一方で、彼ような地位ある者を掌握しておけば、多くの状況において有用かもしれない。"
  aow_events.51.a:0 "教皇庁に彼の行為を知らせなければならない。"
  aow_events.51.b:0 "我々は諜報網を改善するためにこれを脅迫として利用することができる。"
  aow_events.52.t:0 "暴露された枢機卿"
@@ -811,17 +811,17 @@
  west_african.9.a:0 "彼らの信仰は純粋で、拒否してしまえば我々は愚か者になってしまうだろう。"
  west_african.9.b:0 "これは異端よりも悪い。退治されねばならない。"
  west_african.10.t:0 "天空神"
- west_african.10.d:0 "我々は、常に我々と一緒にいる神々の精神を信じ、我々の人々は、我々をそれらから離れて導く人々の嘘にはほとんど感銘を受けない。しかし、我々の国境にいる一部の人々は、彼らが死者の中から帰還したと主張する人たちと遭遇した者に接触し、彼らの信仰と我々の信仰との間に類似点を見ているようだ。ここで多くの者が天空の父を崇拝することを選ぶのと同じように、我々の隣人は、キリストと呼ばれる天の御父を自身が持っているかのように語る。多くの人が、これらの二つは同一のものである可能性があり、我々の信仰の間の敵意は、誤解にすぎないことを示唆し始めている。"
+ west_african.10.d:0 "常に我々と一緒にいる神々の中に我々は精霊を信じている。我々の国民は、我々をそれらから導こうとする人々の嘘に感銘を受けることはほとんどない。しかし、死から蘇ったという者を崇拝する人々と接触したことがある国境にいる一部の人々は、彼らの信仰と我々の信仰との間に類似点があることに気付いたようだ。ここで多くの者が天空の父を崇拝することを選ぶのと同じように、我々の隣人は、キリストと呼ばれる天の御父がおられると語っている。多くの人が、これらの二つは同一のものである可能性があり、我々の信仰間の敵意は、誤解にすぎないのではないかと言い始めている。"
  west_african.10.a:0 "これは、彼らが我々に信仰を強制するために広めた単なる嘘だ。"
  west_african.10.b:0 "我々は他の多くのものとは異なる名前を持っている、なぜ神がそうではないのだ？"
  west_african.11.t:0 "伝統かハラームか？"
- west_african.11.d:0 "預言者の言葉を[Root.GetName]の人々にもたらすことは不可能ではなかったが、これまでの結果は我々の宗教学者の一部を悩ませている。彼らは多くの異教の伝統を放棄しているが、祖先に対する畏敬の念は、崇拝の妨げとなったままだ。我々は自分の家族を敬うことを間違いだとは考えないが、祈りが死者に向けられ、神に向けられないとき、本当に良いものがそこから来ることができるだろうか？それにもかかわらず、これらは古い習慣である。それらを拒否することは、それ以外について耳を傾けている人の多くとの不和を招く可能性がある。"
+ west_african.11.d:0 "[Root.GetName]の人々に預言者の言葉を伝えることは不可能ではなかったが、これまでの結果は我々の宗教学者の一部を悩ませている。彼らは多くの異教の伝統を放棄しているが、祖先に対する畏敬の念は、崇拝という厄介な潜在性とともに残っている。我々は自分の家族を敬うことを間違いだとは考えないが、祈りが神に向けられているのではなく死者に向けられている場合、果たして良いものがあるのだろうか？とはいえ、これは古くからの習慣である。それらを拒否することは、本来なら耳を傾けるであろう多くの人々を疎外してしまう可能性があるだろう。"
  west_african.11.a:0 "我々は彼らの慣習を自分たちのものと同じように尊重する。"
  west_african.11.b:0 "神以外に神はない。彼らがこれを学ばなければ、我々は何も達成することはない。"
  west_african.12.t:0 "多くの精霊、一つの神"
- west_african.12.d:0 "我々は長い間ムスリムの信仰を聞き及んでいたが、我々の伝統に忠実であり続けることを選択した。遥かに遠い創造主にのみ身を捧げ、我々とともにある神々と精霊を捨て去ろうという人々は、確実に不幸の道へ向かうだろう。\n\nムスリムの隣、国境近くで日々暮らす人々は、物事の見方が変わるようになった。ムハンマドが語る言葉は彼らの隣人に対してだけではなく彼ら自身にも向けられており、これは昔ながらの慣習への裏切りなどではなく、むしろ預言者の言う神とは我々の最も尊敬する天空神と同一のものであるのだと彼らは気づいた。"
+ west_african.12.d:0 "我々は長い間ムスリムの信仰を聞き及んでいたが、我々の伝統に忠実であり続けることを選択した。遥かに遠い創造主にのみ身を捧げ、我々とともにある神々と精霊を捨て去ろうという人々は、確実に不幸の道へ向かうだろう。\n\nムスリムの隣、国境近くで日々暮らす人々は、物事の見方が変わるようになった。ムハンマドが語る言葉は自分たちに対してだけではなく彼らの隣人にも向けられており、これは昔ながらの慣習への裏切りなどではなく、むしろ預言者の言う神とは我々の最も尊敬する天空神と同一のものであるのだと彼らは気づいた。"
  west_african.12.a:0 "空に祈る間、あなたの祖先は忘れ去られる。これは受け入れがたい。"
- west_african.12.b:0 "神1柱を受け容れれば、彼らも我らが多数の神を受け容れるかも。"
+ west_african.12.b:0 "彼らの唯一神を受容すれば、彼らも我々の多数の神を受容するかも。"
  west_african.13.t:0 "信仰では妥協しない"
  west_african.13.d:0 "我々の市民の多くはまだ[Root.Religion.GetName]信仰の信者ではないが、我々は希望と忍耐を持っている。他の者はそれほど辛抱強くはない。我々の市民の多くは、神の恩寵によって支配する[Root.Monarch.GetTitle]が我が国の広範な異教徒を受け入れることは不合理であると考えている。これは、全く同じように異教徒たちの間で、彼らが外部から押し付けられた信念体系の国民であるという懸念を引き起こしており、彼らの中には、[Root.Monarch.GetSheHe]がここに何千年も暮らしている人々の精神的な慣習に敬意を示さないのであれば[Root.Monarch.GetTitle]の打倒を呼びかける者もいる。"
  west_african.13.a:0 "信者は正しい。我々はこの不信心を容認しないだろう。"
@@ -829,7 +829,7 @@
  west_african.13.c:0 "彼ら自身で問題を解決させよう。"
  west_african.13.e:0 "和解のための時間はまだある。"
  west_african.14.t:0 "[Root.Religion.GetName]の学者"
- west_african.14.d:0 "我々の信仰の多くから切り離されてはいるが、我々はイスラムの学問を捨ててはいない。$THEOLOGIAN$は、多くの人々の一人に過ぎず、国民に対して偉大な作品を数多く執筆し、彼の作品は数え切れないほどの人々に感銘を与えている。[Root.Religion.GetName]の信仰への献身を通じ、[Root.Capital.GetCapitalName]の神学的な作品により、都市は有名となった。"
+ west_african.14.d:0 "我々の信仰の多くから切り離されてはいるが、我々はイスラムの学問を捨ててはいない。$THEOLOGIAN$はこの命題に対して偉大な作品を描いた多くの人々の一人に過ぎず、彼の作品は数え切れないほど多くの人々に感銘を与えている。[Root.Religion.GetName]の信仰への献身を通じ、[Root.Capital.GetCapitalName]の神学的な作品により、この都市は有名となった。"
  west_african.14.a:0 "それは、時代を通じて知恵のかがり火として残るに違いない。"
  west_african.15.t:0 "[Root.GetName]のフローラ"
  west_african.15.d:0 "[Root.GetAdjective]の学者や科学者たちは特別な技術革新と好奇心に優れている。彼らの最新の取り組みは、医学や染色技術の研究を支援する有用な情報が得られることを期待して、我々の土地の大規模な密林地域の植物の生命について情報を集めることに力を注いでいる。これは研究の他の分野への展開にも波及する植物学の計画であり、今のところ成功している。"
@@ -844,7 +844,7 @@
  west_african.17.b:0 "金を払ってくれるなら、我々はいくらでも提供できる。"
  west_african.17.c:0 "我々だけでなく彼らのために、奴隷制の慣行に終止符を打つ時だ。"
  west_african.18.t:0 "かつての遊牧民"
- west_african.18.d:0 "[Root.GetName]の[Root.Culture.GetName]の人々は、伝統的に少なくとも一部は遊牧民としての生活を送ってきた。我々の集権化の努力により、これはうまくいく可能性は低くなったが、人々はそれに慣れており、我々が介入しないことを期待している。しかし、[Root.Owner.GetName]を管理するのは難しくなる。[Root.Owner.Monarch.GetTitle]の顧問の中には、我々が彼らを支配し、移動を制限するよう試みることを示唆する者もいるが、これは最初の地で成功した生活様式を、踏みにじるものであると見ることができるだろう。"
+ west_african.18.d:0 "[Root.GetName]の[Root.Culture.GetName]の人々は、伝統的に少なくとも一部は遊牧民としての生活を送ってきた。我々の集権化の努力により、これはうまくいく可能性は低くなったが、人々はそれに慣れており、我々が介入しないことを期待している。しかし、[Root.Owner.GetName]を管理するのは難しくなる。[Root.Owner.Monarch.GetTitle]の顧問の中には、我々が彼らを支配し、移動を制限するよう試みることを示唆する者もいるが、これはそもそも彼らを成功に導いた生活様式を踏みにじるものであると見ることができるだろう。"
  west_african.18.a:0 "彼らをこれまでのように生活させよう。"
  west_african.18.b:0 "[Root.GetName]は今のままでも十分、手に負えない。"
  west_african.19.t:0 "アシャンティ"
