--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2407,7 +2407,7 @@
  flavor_brapru.15.a:0 "総長に寛大な提案をする。"
  flavor_brapru.15.a.tt:1 "§R100§!¤を§Yノイマルク§!および§Yドラムブルク§!のために提供します。"
  flavor_brapru.15.b:0 "我々は倹約しなければ。"
- flavor_brapru.15.b.tt:0 "我々は外交的にノイマルクを獲得する別の機会を得ることはないだろう。"
+ flavor_brapru.15.b.tt:0 "外交的にノイマルクを獲得する機会はもうないでしょう。"
  flavor_brapru.16.t:0 "ノイマルクの運命"
  flavor_brapru.16.d:0 "もともとブランデンブルクの一部であった頃、過去にブランデンブルグ辺境伯は資金を調達するめにノイマルクを抵当に入れ、実質的に譲渡した。泥棒男爵に悩まされ、遠隔の州ということもあって我々の騎士団にとって価値があったというよりも一般的には面倒なものであった。\n我々は州を抵当に入れることを受け入れ、十分な返金が保証されれば、ブランデンブルクに返還する提案を受けた。我々が受け入れれば、ノイマルクが元通り戻ってくることはまずないだろうが、それでも選帝侯はそれに対して価値のある金を払うつもりであり、確かにその資金はうまく利用することができる。"
  flavor_brapru.16.a:0 "彼らから金を取れ！"
@@ -2425,12 +2425,12 @@
  flavor_brapru.19.a.tt:0 "聖職者に頼りすぎるのではなく、[Root.Monarch.GetName]は忠誠心の証明された世俗的役人からなる独自の地位を創設する。これは、長期的には、代償を払ってでも我が国の政府を強化することになるだろう。"
  flavor_brapru.19.b:0 "贈収賄と縁故採用で、国家への忠誠を確保できる。"
  flavor_brapru.20.t:0 "ベルリン問題"
- flavor_brapru.20.d:0 "ベルリン＝ケルンの双子都市は、長い間、ブランデンブルク州の首都として効率的に役立ってきた。ブランデンブルクの郊外の人口が一般的に少ないことで、森林地帯や湿地、都市の周囲や沼地は成長が抑えられている。野心的な国家として、我々は絶え間なく成長する官僚主義と宮廷がより大きく象徴的な王家を要求するように、これらの問題を克服しなければならない。\n都市が成長すれば、周囲の要塞を大幅に拡大することから、湿地を排水し、都市の現在の限界の外に新しい、効率的な郊外を計画する一連の改修に着手しなければならない。これは、我々の[Root.Monarch.GetTitle]と協議したい外国人および内務高官の謁見のための、より適切で印象的な場所を作成するため、王宮の改築を伴う必要がある。"
+ flavor_brapru.20.d:0 "ベルリン＝ケルンの双子都市は、長い間、ブランデンブルク州の首都として効率的に機能してきた。しかし、都市とその周辺に湿地帯と森林地帯が広がっていることで都市の成長が妨げられており、ブランデンブルク地域は人口が全般的に少ないのだ。官僚機構と宮廷が拡大を続け、より大きく象徴的な王宮が求められる中で、我々は野望を持つ国家として、これらの問題を克服しなければならない。\n都市を発展させるためには、周囲の要塞の大幅な拡張から、湿地の排水、そして都市の現在の境界の外に新しい効率的な郊外の計画まで、一連の改修に着手しなければならない。これは王宮の改築を伴う必要があり、我々の[Root.Monarch.GetTitle]との謁見を希望する国内外の要人にふさわしい、より印象的な場所を造らなくてはならない。"
  flavor_brapru.20.a:0 "作業を開始しよう！"
  flavor_brapru.20.a.tt:0 "街の改修が完了するまでは、ベルリンは税収の減少を我慢しなければならないだろう。"
  flavor_brapru.20.b:0 "なぜこのような外面的な問題に金を使うのだ？"
  flavor_brapru.21.t:0 "ベルリンの統一"
- flavor_brapru.21.d:0 "ベルリン＝ケルンの双子都市における我々の広大な改装はようやく功を奏した。沼地は排水され、要塞が建てられ、行政官、宮廷関係者、そして彼らが必要とする高級品を供給するために必要な地場産業を収容するため、都会の周りには、有機的な新しい郊外がいくつも生まれた。あまりにもこの街が発展したため、もはや「ベルリンならびにケルンの諸都市」という言い方は意味がなく、今では合併して1つの街となり、単にベルリンと呼ばれている。\nしかし、最も印象的なのは、新しい首都周辺の宮殿、教会、道路、橋、庭園である。アラバスタホールのような壮大な環境では、訪問者たちは主要なローマ帝国の皇帝の彫像の形をした栄光ある[Root.Monarch.Dynasty.GetName]一族の祖先に驚嘆することだろう。"
+ flavor_brapru.21.d:0 "ベルリン＝ケルンの双子都市における我々の大規模な改装はようやく功を奏した。沼地は排水され、要塞が建てられ、行政官、宮廷関係者、そして彼らが必要とする高級品を供給するために必要な地場産業を収容するため、都市周辺には交通の便の良い郊外が新たにいくつも生まれた。あまりにもこの街が発展したため、もはや「ベルリンならびにケルンの諸都市」という言い方は意味がなく、今では合併して1つの街となり、単にベルリンと呼ばれている。\nしかし、最も印象的なのは、新しい首都とその周辺の宮殿、教会、道路、橋、庭園である。アラバスタホールのような壮大な環境では、ローマ帝国の主要な皇帝になぞらえた我々の祖先の彫像という形で、輝かしい[Root.Monarch.Dynasty.GetName]一族の祖先に訪問者たちは驚嘆することだろう。"
  flavor_brapru.21.a:0 "我々は真に、[Root.Monarch.Dynasty.GetName]の名声にふさわしい殿堂を築いたのだ！"
  flavor_brapru.23.t:0 "フランケン系ホーエンツォレルン家"
  flavor_brapru.23.d:0 "ブランデンブルクのフリードリヒ1世が死去すると、ホーエンツォレルンの土地は彼の息子たちによって分割された。\nブランデンブルクのフリードリヒ2世の統治が終わると、その地位は弟アルブレヒト・アヒレスに移った。アルブレヒトはすでにフランケン系のブランデンブルク・アンスバッハ侯領の支配者であるため、現在、彼はブランデンブルクとアンスバッハの両方の支配者である。ホーエンツォレルン家の土地は今や再び統一された。"
@@ -2438,7 +2438,7 @@
  flavor_brapru.23.a.tt:0 "アンスバッハはブランデンブルクの同君連合§R下位国§!となります。"
  flavor_brapru.23.b:0 "アルブレヒトは王位を一族の者に譲らねばならない。"
  flavor_brapru.25.t:0 "アキレアの処分"
- flavor_brapru.25.da:1 "ホーエンツォレルン家の土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、それらが分割され、将来再び分離される恐れがあることである。事実、ブランデンブルク辺境伯自体、溢れんばかりの息子たちの間で分割されるかもしれないのだ。このことは、ザクセンやテューリンゲンのようなかつて強大だった領土が、主要な称号の保持者たる多くの後継者らに分配され大変な目に遭ったこともあり、[Root.Monarch.GetName]がむしろ避けたいものであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないと懸念する警告さえ受けている。選帝侯の国は不可分であることが期待されるのだ。\n\nしかし、我々がブランデンブルク選帝侯を永遠に守ろうとするなら、王朝のフランケン系の所有権を若き息子たちに手放さなければならないかもしれない。"
+ flavor_brapru.25.da:1 "ホーエンツォレルン家の土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、それらが分割され、将来再び分裂する恐れがあることだ。事実、ブランデンブルク辺境伯自体、多すぎる息子たちの間で分割されるかもしれないのだ。このことは、ザクセンやチューリンゲンのようなかつて強大だった領土が、主要な称号の保持者たる多くの後継者らに分配されたことで大変な目に遭ったことを見ても明らかであり、[Root.Monarch.GetName]としては避けたいところである。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないと懸念する警告さえ受けている。選帝侯の国は不可分であることが期待されるのだ。\n\nしかし、我々がブランデンブルク選帝侯を永遠に守ろうとするなら、王朝のフランケン領の所有権を若き息子たちに手放さなければならないかもしれない。"
  flavor_brapru.25.db:0 "ブランデンブルクの土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、ブランデンブルクの辺境伯が過剰な数の息子たちの間で分割されるかもしれないことである。ザクセンやテューリンゲンのようなかつての強大な土地が、主要な多くの後継者によって分配されることでひどく悩まされることを、[Root.Monarch.GetName]がむしろ回避すべきであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないという懸念する警告さえ受けている。選帝侯の国は不可分であることが期待されるのだ。"
  flavor_brapru.25.a:0 "ブランデンブルクは不可分たるべし！"
  flavor_brapru.25.a.tt:0 "§Rアンスバッハはもはやブランデンブルクの支配を受けない。§!"
@@ -2481,7 +2481,7 @@
  flavor_brapru.33.c:0 "我々は彼らの古くからの権利を踏みにじることなどできない！"
  flavor_brapru.33.c.tt:0 "[Root.GetName]の階級を抑圧しようとするのは控える。"
  flavor_brapru.34.t:0 "[berlin_province.GetCapitalName]への運河"
- flavor_brapru.34.d:0 "[Root.Country.GetName]の心臓部は、この地域の水路に接続されていないことから構造的に不利な立場に陥っている。これを補うため、我々はオーデル川と我々の首都である[berlin_province.GetCapitalName]を流れるシュプレー川の間に運河を建設するように手配した。これがもたらす交易と輸送は、長年にわたり我々の土地における地方の収入と繁栄とを増加させ、このためすでに投資された金額は重要ではない。しかし、その作業は予想以上に困難であることが明らかとなっており、建設は現在中断されている…事業の資金は不足しており、労働者たちは道具を下に置いている。"
+ flavor_brapru.34.d:0 "[Root.Country.GetName]の中心地は、この地域の水路に接続されていないという構造的な欠陥に長い間悩まされていた。これを改善するため、我々はオーデル川と首都[berlin_province.GetCapitalName]を流れるシュプレー川の間に運河を建設するように手配した。この運河が可能にする交易と輸送は、今後何年にもわたって地元の収入と自国の繁栄とを増大させるだろう。そのため既に投資された金額は重要ではない。しかし、その作業は予想以上に困難であることが明らかとなっており、建設は現在中断されている…事業の資金は不足しており、労働者たちは道具を下に置いてしまった。"
  flavor_brapru.34.a:0 "投資追加は疑いなく行われる。"
  flavor_brapru.34.a.tt:0 "我々の国庫から金を使って事業を完了させる。"
  flavor_brapru.34.b:0 "我々を支援するよう貴族を説得しなければならない。"
