--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -2393,13 +2393,13 @@
  EVTDESC6189:0 "自然の精霊たちは、我々の寛容な政策がシャーマニズムを我々の世界に広めることを許していると、人々に伝えている。"
  EVTOPTA6189:0 "まあ、それはあなたにとって許容範囲だ。"
  EVTNAME6190:0 "狩猟場からの不幸な知らせ"
- EVTDESC6190:0 "我々のシャーマンは、我々の人々の中には、我々がとても寛容なので、精霊信仰への転向を決めた者がいると報告している。"
+ EVTDESC6190:0 "我々のシャーマンの報告によれば、我々がとても寛容なので、精霊信仰への転向を決めた一部の者がいるということだ。"
  EVTOPTA6190:0 "それでも、少なくとも我々は寛容だ。"
  EVTNAME8000:0 "自然の精霊たちは懸念する"
  EVTDESC8000:0 "自然の精霊たちは、我々の寛容な政策がトーテム信仰を我々の世界に広めることを許していると、人々に伝えている。"
  EVTOPTA8000:0 "まあ、それはあなたにとって許容範囲だ。"
  EVTNAME8001:0 "狩猟場からの不幸な知らせ"
- EVTDESC8001:0 "我々のシャーマンは、我々の人々の中には、我々がとても寛容なので、トーテム信仰への転向を決めた者がいると報告している。"
+ EVTDESC8001:0 "我々のシャーマンの報告によれば、我々がとても寛容なので、トーテム信仰への転向を決めた一部の者がいるということだ。"
  EVTOPTA8001:0 "それでも、少なくとも我々は寛容だ。"
  EVTNAME8002:0 "精神的な結びつきの危機"
  EVTDESC8002:0 "我々が国家を通じて精霊信仰を広めていくにつれて、動物や植物とのきずなは危険にさらされている。"
@@ -2476,7 +2476,7 @@
  EVTDESC6312:0 "防衛よりも攻撃を選択する我々の政策は、陸軍の鋭気に関する噂につながった。"
  EVTOPTA6312:0 "突撃だ。"
  EVTNAME6313:0 "放置された要塞"
- EVTDESC6313:0 "攻撃的な態度を支持する我々の政策は、我々の要塞が放置されることにつながっている。"
+ EVTDESC6313:0 "攻撃的な姿勢を好む我々の方針によって、我々の要塞がおざなりされることになった。"
  EVTOPTA6313:0 "放置しておけ。"
  EVTOPTB6313:0 "何かをしよう。"
  EVTNAME6314:0 "要塞の苦境"
@@ -2496,7 +2496,7 @@
  EVTOPTA6317:0 "彼らにやらせておこう。"
  EVTOPTB6317:0 "方針を反転させる時だ。"
  EVTNAME6318:0 "将軍は柔弱な要塞に難色を示す"
- EVTDESC6318:0 "将軍たちは我々の攻撃的な政策を愛しているため、我々の強大な要塞の一つを適切に使用することを拒否している。"
+ EVTDESC6318:0 "将軍たちは我々の攻撃的な方針を愛好しているため、我々の強力な要塞の一つを適切に使用することを拒否している。"
  EVTOPTA6318:0 "まったくもって正しい。"
  EVTOPTB6318:0 "再考しよう。"
  EVTNAME6319:0 "要塞化の取り組み"
@@ -2649,7 +2649,7 @@
  EVTDESC6435:0 "我々の大規模農園の一つで、奴隷たちが暴動を繰り広げた。抑圧の残忍さは幸せな奴隷の人々の間で不平を高めた。"
  EVTOPTA6435:0 "彼らは彼らの立場を知るべきだ。"
  EVTNAME6500:0 "任意拒否権"
- EVTDESC6500:0 "貴族たちは我々に興味深い提案をしてきた。彼らに任意拒否権を与えるなら、彼らは現在の戦争の間に我々に相当な支援を与えるだろう。彼らの提案は確かに非常に寛大だが、我々の顧問の中には、これがただの端緒にすぎないかもしれないと示唆する者もいる。実際には、我々が拒否すれば彼らは怒ってしまうだろうが、今後の譲歩を求めるために、我々が示している将来の弱点を奪うであろうことは間違いない。"
+ EVTDESC6500:0 "貴族たちは我々に興味深い提案をしてきた。彼らに任意拒否権を与えるなら、彼らは現在の戦争の間に我々に相当な支援を与えるだろう。彼らの提案は確かに非常に寛大だが、我々の顧問の中には、これがただの端緒にすぎないかもしれないと示唆する者もいる。実際には、我々が拒否すれば彼らは怒ってしまうだろうが、今後我々が弱みを見せた場合に、それを利用してさらなる譲歩を迫るであろうことは間違いない。"
  EVTOPTA6500:0 "それはただのラテン語の成句だ。"
  EVTOPTB6500:0 "彼らは反乱を起こせばいい！"
  EVTNAME6501:0 "さらなる譲歩を要求"
@@ -2660,7 +2660,7 @@
  EVTDESC6502:0 "我々の貴族たちは、彼らの土地が敵に奪われれば、任意拒否権をもはや享受することができないと恐れている。したがって、彼らは戦争の努力に貢献している。"
  EVTOPTA6502:0 "素晴らしい！"
  EVTNAME6503:0 "改革"
- EVTDESC6503:0 "長い間、政府の権力は、任意拒否権の付与によって深刻に制限されていた。政府はようやく改革を検討するのに十分な強さを感じている。しかし、我々の近隣諸国は、国家を強化しようとする我々の試みをあまり親切に見ることはないかもしれない。"
+ EVTDESC6503:0 "長い間、任意拒否権の付与によって政府の権力は著しく制限されていた。政府はようやく改革を検討するのに十分な強さを持っていると感じている。しかし、国家を強化しようとする我々の試みを、近隣諸国はあまり好意的に見ていないかもしれない。"
  EVTOPTA6503:0 "うむ、我々はやらなければならぬ。"
  EVTOPTB6503:0 "いや、適切な時期ではない。"
  EVTNAME6504:0 "任意拒否権の終了"
