--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -136,7 +136,7 @@
  sortition_reform:0 "くじ引き"
  sortition_reform_desc:0 "残念なことに、投票は買うことができ、昔ながらの忠誠心は投票者の判断を曇らせる可能性がある。重要な公職は候補者から半ば無作為に選ばれるシステムを実装しよう。"
  universal_suffrage_reform:0 "選挙権の拡大"
- universal_suffrage_reform_desc:0 "幅広くかつより多くの市民を代表した公務員を選ぶために、国境に住む多くの人々に重要な公職の可能性を開放しよう。"
+ universal_suffrage_reform_desc:0 "幅広くかつより多くの市民を代表した公務員を選ぶため、国内の多くの人々に重要な公職の可能性を開放しよう。"
  question_of_dictatorship:0 "独裁の可能性"
  seize_executive_power_reform:0 "行政権の奪取"
  seize_executive_power_reform_desc:0 "共和制は我々によく尽くしてきたが、我が国を新しい時代にすべく強力な支配者に権限を与える時だ。"
