--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -2412,7 +2412,7 @@
  flavor_per.63.a.bt:0 "§Yゾロアスター教の預言者§!からの支援により、以下の効果が発生します："
  flavor_per.63.b:0 "なんて数だ。要求を呑まざるをえんか。"
  flavor_per.63.b.at:0 "§R§Yゾロアスター教§!になる機会を失います。§!"
- flavor_per.63.b.bt:1 "ゾロアスター教ミッションがを、§Oムスリム§!ミッションルートに置きかわります。"
+ flavor_per.63.b.bt:1 "ゾロアスター教ミッションが、§Oムスリム§!ミッションルートに置きかわります。"
  flavor_per.64.t:0 "[Root.GetDynastyOrFallback][Root.GovernmentName]の終焉"
  flavor_per.64.desc:0 "[Root.GetAdjective]軍はあらゆる手段を使って戦ってきたが、反乱軍は我々の有能な兵士たちには多すぎることが判明しました。特に、[Root.GetChurchOrFallbackName]の背後に結集した反乱軍の兵士たちは、国土に甚大な被害をもたらし、かつては栄華を誇った[Root.GetName]の宮殿を破壊しました。\n[Root.GovernmentName]は廃止され、王朝のメンバーは異端と[Root.GetReligiousMainDeityName]の名前を冒涜した罪で処刑されました。ゾロアスター教徒は強制的に改宗させられたか、[Root.GetName]から追放されたのです。\n\nこれは[Root.GetDynastyOrFallback][Root.GovernmentName]の終わりであり、新しい[Root.Religion.GetName]神政政治の始まりです。"
  flavor_per.64.a:0 "これは[Root.GetName]の歴史における新たな章となるだろう。"
@@ -3160,7 +3160,7 @@
  georgian_crisis.4.a:0 "部隊を結集し、デメトリウスに裏切りの代償を支払ってもらいましょう！"
  georgian_crisis.4.b:0 "勝ち目がない…"
  georgia_constantinople_title:0 "コンスタンティノープルに首都を移す"
- georgia_constantinople_desc:0 "重大な出来事として、勇敢な国ジョージアはコンスタンティノープルの再征服で勝利を収め、ローマ帝国の古代の王座を取り戻しました。この歴史的都市の新たな管理者として、今、私たちの前には重大な決断が迫られています。首都をコンスタンティノープルに移転し、この象徴的な帝国の中心に君臨することでグルジアの統治支配を確固たるものにし、栄光の勝利を受け入れるべきだろうか？"
+ georgia_constantinople_desc:0 "重大な転換点は、勇敢な国グルジアがコンスタンティノープルの再征服で勝利を収め、ローマ帝国の古代の王座を取り戻したことである。この歴史的な都市の新たな管理者として、我々の前には現在、重大な決断が存在する。首都をコンスタンティノープルに移転し、この象徴的な帝国の中心に君臨することでグルジアの統治支配を確固たるものにし、栄光の勝利を受け入れるべきだろうか？"
  flavor_geo.1.t:0 "問題ある王国"
  flavor_geo.1.d:0 "かつてコーカサスで突出した勢力で、他の追随を許さない覇権国家であったグルジアは、数世紀にわたり、劇的な没落に見舞われ、その秀でた地位を失いました。繁栄の時代はモンゴルやトルコ、ティムールの襲来によって突如として終わりを告げ、容赦なき生存競争への道を開きました。この勢力の衰退は経済の衰退を伴い、さらなる特権を要求するどうしようもない貴族を生み出しました。\n\nこの問題に対処しようと、国王アレクサンドレ1世は由緒あるビザンツの伝統に倣って、自身の三人の息子を共同統治者として任命し、息子たちが王国の統治権を共有する三頭政治として知られる独自体制を確立しました。しかし、アレクサンドレが1442年に退位しこの体制は短命に終わり、アレクサンダーは1442年に王位を放棄し修道院に隠遁してしまったため、この取り決めは短命に終わってしまいました。\n\n彼の長男、ヴァフタングは王位を請求しましたが、彼の名を継ぐ後継者がいなかったので、貴族と彼の兄弟は機が熟すのを待ち、自ら王位を主張する機会を心待ちにしています。それ故、私たち王国の将来の軌跡は疑念に包まれたままとなっています。"
  flavor_geo.1.a:0 "勝つんだよ！"
@@ -3459,7 +3459,7 @@
  qara_qoyunlu_patronize_arts_title:0 "芸術と文学の後援"
  qara_qoyunlu_patronize_arts_desc:0 "芸術と文学は文明の活力源であり、その精神を反映し、歴史を保全し、想像力を育むものである。なぜなら、芸術と文学というのは自国の帝国の魂を描く画布だからである。芸術家、詩人、作家の活気ある環境を育み、彼らの活動を支援することで、芸術と文学の風景が繁栄するのだ。"
  qara_qoyunlu_blue_mosque_title:0 "ブルーモスクの建造"
- qara_qoyunlu_blue_mosque_desc:0 "我々が黒羊朝の支配下で繁栄するにつれ、道徳原則および倫理原則の根幹をなしている信仰の尊重を忘れてはならない。自国の霊的な献身と建築技術の象徴は、自領の中心地、都市タブリーズから生まれなければならない。自国荘厳なモスク、ブルーモスクを建造することである。ブルーモスクは礼拝所としてだけでなく、文化的かつ芸術的偉業の道標としても機能することだろう。"
+ qara_qoyunlu_blue_mosque_desc:0 "我々が黒羊朝の支配下で繁栄するにつれ、道徳原則および倫理原則の根幹をなしている信仰の尊重を忘れてはならない。自国の霊的な献身と建築技術の象徴は、自領の中心地、都市タブリーズから生まれなければならない。我々の使命は、荘厳なモスク、ブルーモスクを建造することである。ブルーモスクは礼拝所としてだけでなく、文化的かつ芸術的偉業の道標としても機能することだろう。"
  qara_qoyunlu_pearl_of_the_empire_title:0 "帝国の真珠"
  qara_qoyunlu_pearl_of_the_empire_desc:1 "タブリーズ、この栄光の都市は生命、文化、商業が鼓動している自領の中心地だ。この都市をさらに向上させ、「帝国の真珠」、比類なき威信と富を誇る都市へと変貌させるときだ。タブリーズは、世界中から学者や商人、職人を引き寄せ、驚異の都市、世界が焦がれる都市にならねばならない。"
  qara_qoyunlu_imperial_fabrics_title:0 "帝国の織物"
@@ -3515,7 +3515,7 @@
  aq_qoyunlu_patronize_arts_title:0 "芸術と文学の後援"
  aq_qoyunlu_patronize_arts_desc:0 "芸術と文学は文明の活力源であり、その精神を反映し、歴史を保全し、想像力を育むものである。なぜなら、芸術と文学というのは自国の帝国の魂を描く画布だからである。芸術家、詩人、作家の活気ある環境を育み、彼らの活動を支援することで、芸術と文学の風景が繁栄するのだ。"
  aq_qoyunlu_blue_mosque_title:0 "ブルーモスクの建造"
- aq_qoyunlu_blue_mosque_desc:0 "我々が白羊朝の支配下で繁栄するにつれ、道徳原則および倫理原則の根幹をなしている信仰の尊重を忘れてはならない。自国の霊的な献身と建築技術の象徴は、自領の中心地、都市タブリーズから生まれなければならない。自国荘厳なモスク、ブルーモスクを建造することである。ブルーモスクは礼拝所としてだけでなく、文化的かつ芸術的偉業の道標としても機能することだろう。"
+ aq_qoyunlu_blue_mosque_desc:0 "我々が白羊朝の支配下で繁栄するにつれ、道徳原則および倫理原則の根幹をなしている信仰の尊重を忘れてはならない。自国の霊的な献身と建築技術の象徴は、自領の中心地、都市タブリーズから生まれなければならない。我々の使命は、荘厳なモスク、ブルーモスクを建造することである。ブルーモスクは礼拝所としてだけでなく、文化的かつ芸術的偉業の道標としても機能することだろう。"
  aq_qoyunlu_pearl_of_the_empire_title:0 "帝国の真珠"
  aq_qoyunlu_pearl_of_the_empire_desc:1 "タブリーズ、この栄光の都市は生命、文化、商業が鼓動している自領の中心地だ。この都市をさらに向上させ、「帝国の真珠」、比類なき威信と富を誇る都市へと変貌させるときだ。タブリーズは、世界中から学者や商人、職人を引き寄せ、驚異の都市、世界が焦がれる都市にならねばならない。"
  aq_qoyunlu_imperial_fabrics_title:0 "帝国の織物"
