--- a/source/localisation/technology_l_english.yml
+++ b/source/localisation/technology_l_english.yml
@@ -83,7 +83,7 @@
  mil_tech_cs_3_desc:0 "中世の終わりまでに、陸軍はより職業的で、高度に組織化されたものになっていった。徴収兵と常備兵は改良された制度によって今や戦場を支配している。歩兵の力は徐々に、だが確実に騎兵の立場を脅かしているのだ。"
  mil_tech_cs_4_desc:0 "中世を通じ、騎兵の優位性は規律あるパイク兵たちの挑戦を受けてきた。バノックバーンや金拍車の戦いでは、騎兵がパイク兵に敗北を喫した。改善された訓練と規律、及び近接戦闘への支援を提供する剣士の追加の組み合わせにより、この陣形の効率を頂点にまで高めている。"
  mil_tech_cs_5_desc:0 "パイクは非常に簡単に製作できる武器であるが、パイクの使用から最大限の利益を得るには、全体の陣形の中で同じ長さや刃を持った武器を振るうことが求められる。"
- mil_tech_cs_6_desc:0 "中国で12世紀に発達した手持ち大砲は14世紀にかけてヨーロッパに伝わった。この時点ではこのタイプの武器の弱点は戦場での彼らの有用性を損ねていた。が、後に、軽く信頼性の高いアクアバスは3つの要因によって弓を戦場から追放するに至った。それは装甲に対してより有用であり、わずかな訓練のみで誰にでも使え、そして一定の能力を発揮することができた。"
+ mil_tech_cs_6_desc:0 "手持ち大砲は中国で12世紀に発達し、14世紀までにヨーロッパへ伝わった。しかし、これらの武器の弱点のために戦場での有用性を損ねていた。が、後に、軽く信頼性の高いアーケバス銃は3つの要因によって弓を戦場から駆逐するに至った。それは装甲の貫通力に優れていたこと、わずかな訓練のみで誰にでも扱えたこと、そして使用者の能力に依存せず威力を発揮したことだ。"
  mil_tech_cs_7_desc:0 "砲兵は、13世紀以来、ヨーロッパの文書に記録が見られるが、機動力の欠如のために、非常に限られた戦場でのみ使用されていた。1470年代の前車の開発によって、砲はより移動しやすく有用なものとなった。"
  mil_tech_cs_8_desc:0 "火縄銃は武器として使いやすかったものの、射撃には時間がかかり、しかも不正確で、取り残された銃兵たちは、騎兵の突撃に対しては弱い存在だった。パイク兵と混合することで、火縄銃兵が射撃を行い、敵の騎兵や歩兵が現れたときには後退して、パイク兵がこれを遮断することができるようになった。"
  mil_tech_cs_9_desc:0 "訓練と経験は、常に戦場において素晴らしい結果をもたらす。火薬の出現と、火薬と他の歩兵装備に関する戦術の変革によって、これらの技術革新に精通した軍隊が求められている。職業軍人はまだその域まで遠く、コンドッティエーレ、スイス傭兵やランツクネヒトのような傭兵によって満たされている。職業傭兵士官によって育成された軍隊は、軍隊の変遷期の中間にはその地域で求められている連隊を供給した。"
