--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -508,7 +508,7 @@
  totemism_religion_desc:1 "トーテム信仰は、個々人は例外なく動物、即ちトーテムとの霊的なつながりをもつと教えている。トーテムを共有するものによる一族を形成し、それをもう一つの家族と考える。\nゲーム内ではトーテム信仰はすべての北アメリカ先住民国の国教であり、北アメリカ大陸の大部分に存在している。"
  coptic_religion_desc:1 "コプト正教会は、アレクサンドリアの典礼に従い、アレクサンドリア教皇に答えるキリスト教の支流である。\nエジプトは数百年前にムスリムに陥落したため、総主教は非キリスト教国家によって統治され、コプト教会はエチオピアとヌビアにおいてのみ多数派の信仰として生き残っていまる。"
  tengri_pagan_reformed_religion_desc:1 "テングリとは、古代テュルクやモンゴルの主神のひとつであり、シャーマニズム宗教である。\nゲーム内ではこの宗教はシベリアや満州などの北アジアの諸州における様々なシャーマニズムを包含している。"
- inti_religion_desc:0 "インティは、多くの共通した特徴を持つアンデスの信仰を包含している。インティとはインカ帝国がすべての他地方の聖地で祀った太陽神の名である。\nゲームではほとんどのアンデスの国がインティで始まる。"
+ inti_religion_desc:0 "インティは、多くの共通した特徴を持つアンデスの信仰を幅広く包含している。インティ自体は、すべての他地方のワカよりもインカ帝国が推奨して祀った太陽神の名である。\nゲームではほとんどのアンデスの国がインティで始まる。"
  nahuatl_religion_desc:1 "ナワトルは、メソアメリカの伝統的多神教である。神々や概念はマヤと似通っているが、ナワ族やアステカ人は宇宙のサイクルで生き残るための人身供犠の必要性を非常に重視する。\n本ゲームでは主に現代のメキシコ周辺のほとんどの地域がナワトルで始まる。"
  mesoamerican_religion_religion_desc:1 "マヤは、古いマヤ文明から継承された一連のメソアメリカの伝統的多神教を包含している。神名は異なるが、多くの伝統はナワトルとよく似ている。\n本ゲームではユカタン半島やかつてマヤパン連盟が存在した土地がマヤ信仰で始まる。"
  chinaware:0 "陶磁器"
@@ -2027,7 +2027,7 @@
  ethiopian_gunpowder_warfareDESCR:0 "北部出身のアフリカの戦士はマスケット銃で武装し、すぐれた守備戦術を持っている。"
  ethiopian_mountain_warfareDESCR:0 "アフリカの山岳気候に適応した、良好な守備能力を持つ山岳戦士である。"
  fluteDESCR:0 "16世紀にネーデルラントで開発された貨物船は、貨物の空間と乗組員の効率を最大限に高めるために建設された。そしてそれは16世紀と17世紀に最も一般的に使用された船の一つとなった。標準的な設計では武装されていなかったが、必要なときに大砲で武装し、補助船としての役割を果たすことができた。"
- french_carabinierDESCR:0 "騎銃騎兵は16世紀にもたらされ、胸甲騎兵と多くの面で共通していた重騎兵の一種であった。胸甲騎兵よりわずかに劣るものの、彼らもまた保護装甲を身に着けていた。両者の主な違いは武装であった。騎銃騎兵の主な武器は、時にアークウィバスとも呼ばれた、短いホイールロック式の銃である、騎兵銃であった。彼らは騎兵銃に加えて、ピストルと剣で武装していた。"
+ french_carabinierDESCR:0 "騎銃騎兵は16世紀に初めて登場し、胸甲騎兵と多くの共通点をもつ重騎兵の一種であった。胸甲騎兵よりは少し小さいものの、彼らもまた保護装甲を身に着けていた。両者の主な違いは武装であった。騎銃騎兵の主な武器は騎兵銃で、時にアーケバスとも呼ばれた、短いホイールロック式の銃である。彼らは騎兵銃に加えて、ピストルと剣で武装していた。"
  french_caracolleDESCR:0 "16世紀後半から17世紀初頭にかけて、西ヨーロッパの騎兵にとっての最も一般的な戦闘陣形は、二つの方法で使用できるカラコールであった。第一の方法では、最前列の騎兵部隊が敵に対して正面で武器を構え、騎兵は30～50歩の範囲で武器を発射した。それから彼らはいったん反転し、編隊の後ろに戻り、最後列に移動した。次の列も同様に武器を構え、敵を射撃して後方へと戻る。この編制では、最前列が常に武器を構え、他の列は装填して射撃を待っていた。もう一つの方法は、敵が右にいるときに発射し、円運動を続けて、連続して攻撃を仕掛け、その間ずっと再装填と復帰を続け、再び戦列を形成するものであった。"
  french_cuirassierDESCR:0 "胸甲騎兵は15世紀後半に現れた重騎兵の一種であった。この種類の騎兵は、頭の下から膝まで装甲で覆われていた。彼の身体は胸板で保護され、胸甲の名はここから取られている。胸板は、ピストルからの射撃だけでなく、マスケット銃から発射された弾丸にも耐えるように設計されていた。彼らはホイールロック式のピストル、槍、剣で武装していた。胸甲騎兵は主に衝撃騎兵として運用され、このゲームでフォーカスされている、ほぼ全ての期間にわたって使用された。"
  french_bluecoatDESCR:0 "ルイ14世のフランス軍に起源を持つ。ブルーコート歩兵は攻撃において特別な鋭気を示した。攻撃が常に防御に勝つと信じている指揮官にとっては完璧である。"
@@ -4510,7 +4510,7 @@
  RMN:0 "ルーマニア"
  RMN_ADJ:0 "ルーマニア"
  romanian_nation_title:0 "ルーマニア国家の形成"
- romanian_nation_desc:0 "ローマ帝国の最後の痕跡は過ぎ去り、多くの人が皇帝の王冠を主張しているが、我々こそ、その真の子孫である。すべての祖先の土地が我々の賢明な支配下で統一されることで、我々は繁栄の新しい時代を導くことができる。我々はローマの子供であり、ルーマニア民族である！"
+ romanian_nation_desc:0 "ローマ帝国の最後の残滓は消え去り、多くの人が皇帝の王冠を主張しているが、我々こそ、その真の子孫である。すべての祖先の土地が我々の賢明な支配下で統一されることで、我々は繁栄の新しい時代を導くことができる。我々はローマの子、すなわちルーマニア人である！"
  REV_LOSE_CB:0 "§Y$ACTIVE$§Wは§Y$PASSIVE$§!への開戦事由§Y$TYPE$§Wを失います。\n"
  RENAME_CAPITAL_EFF:0 "§Y$PROVINCE$§!の州都が§Y$NEW$§!に改称されます。\n"
  regency_council:0 "摂政"
@@ -4841,7 +4841,7 @@
  MEI_ADJ2:0 "マイセン"
  SUK_ADJ2:0 "スコータイ"
  liberum_veto_title:0 "任意拒否権の制度"
- liberum_veto_desc:0 "我々の貴族は興味深い提案と共に我々の元へやって来た。我々が彼らに任意拒否権を与えるなら、彼らは現在の戦争の間、我々に相当な支持を与えてくれるだろう。彼らの提案は確かに非常に寛大なものだが、我々の顧問の中には、これがただ端緒にすぎないかもしれないと示唆している。事実、我々が拒否すれば彼らは怒るだろうが、我々がさらなる譲歩を求めるために示している将来の弱点について、彼らは確実に食い物にするだろう。"
+ liberum_veto_desc:0 "貴族たちは我々に興味深い提案をしてきた。彼らに任意拒否権を与えるなら、彼らは現在の戦争の間に我々に相当な支援を与えるだろう。彼らの提案は確かに非常に寛大だが、我々の顧問の中には、これがただの端緒にすぎないかもしれないと示唆する者もいる。実際には、我々が拒否すれば彼らは怒ってしまうだろうが、今後我々が弱みを見せた場合に、それを利用してさらなる譲歩を迫るであろうことは間違いない。"
  indian_trade_company_title:0 "インド交易会社の創設"
  indian_trade_company_desc:0 "東インド会社に対する我々の関心は、主に、他による当初の事業によって生み出された膨大な収入によりもたらされた希望と野心に基づいている。同時に、現代の世界交易において支配的役割を果たすという$MONARCH$の欲求もその一部である。これは、必ずしも我が国の商人によって全面的に支持されている欲求ではない。"
  own_port_province_in_far_east_tooltip:0 "インド、中国、日本あるいは東インドの港のある州を保有している。"
